--- a/components/GooeyNav.css
+++ b/components/GooeyNav.css
@@ -68,11 +68,12 @@
 .gooey-nav-container nav ul li.active {
   color: var(--nav-text-color-active);
   text-shadow: none;
+  background: none !important;
 }
 
 .gooey-nav-container nav ul li.active::after {
-  opacity: 1;
-  transform: scale(1);
+  opacity: 0;
+  transform: scale(0);
 }
 
 .gooey-nav-container nav ul li a {
@@ -116,14 +117,14 @@
   position: absolute;
   inset: -75px;
   z-index: -2;
-  background: black;
+  background: transparent !important;
 }
 
 .gooey-nav-container .effect.filter::after {
   content: "";
   position: absolute;
   inset: 0;
-  background: white;
+  background: transparent !important;
   transform: scale(0);
   opacity: 0;
   z-index: -1;
